<resources>
    <string name="app_name">ROPOSO</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty">Empty</string>
    <string name="title_activity_main_activity">Roposo Story</string>
    <string name="title_activity_story_description">StoryDescription</string>
    <string name="image_description">Fashion Diva Image</string>
    <string name="title">Title : </string>
    <string name="description">Story Description : </string>
    <string name="author">Author : </string>
    <string name="about">About : </string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="title_activity_main_activity_recycle">MainActivityRecycle</string>
</resources>
