<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:contentDescription="@string/image_description"
            android:src="@drawable/noimg"
            android:paddingBottom="@dimen/paddingtopbottom"
            android:paddingTop="@dimen/paddingtopbottom"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/view_color" />
        <!--
        Title
        -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/paddingtopbottom"
            android:paddingTop="@dimen/paddingtopbottom" >

            <TextView
                android:id="@+id/tv_title"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_titledetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/textviewpaddingtopbottom"
                android:paddingEnd="@dimen/textviewpaddingtopbottom"
                tools:targetApi="jelly_bean_mr1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/view_color" />

        <!--
        Author
        -->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingtopbottom"
            android:paddingTop="@dimen/paddingtopbottom" >

            <TextView
                android:id="@+id/tv_author"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_authorname"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/textviewpaddingtopbottom"
                android:paddingTop="@dimen/textviewpaddingtopbottom"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:id="@+id/view_author"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/view_color" />

        <!--
        About Author
        -->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingtopbottom"
            android:paddingTop="@dimen/paddingtopbottom" >

            <TextView
                android:id="@+id/tv_about"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_aboutdetail"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/textviewpaddingtopbottom"
                android:paddingTop="@dimen/textviewpaddingtopbottom"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <View
            android:id="@+id/view_aboutauthor"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/view_color" />

        <!--
        Story Description
        -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingtopbottom"
            android:paddingTop="@dimen/paddingtopbottom" >

            <TextView
                android:id="@+id/tv_desription"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_descriptiondetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/textviewpaddingtopbottom"
                android:paddingTop="@dimen/textviewpaddingtopbottom"
                android:gravity="center_vertical" />
        </LinearLayout>

        <View
            android:id="@+id/view_afterDescription"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/view_color" />


        <Button
            android:id="@+id/btn_follow"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/follow"
            android:paddingBottom="@dimen/paddingtopbottom"
            android:paddingTop="@dimen/paddingtopbottom" />


    </LinearLayout>

</ScrollView>